WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195194
HTTPSUpgradeList.db database should be opened in readonly mode
https://bugs.webkit.org/show_bug.cgi?id=195194
Summary
HTTPSUpgradeList.db database should be opened in readonly mode
Chris Dumez
Reported
2019-02-28 16:46:03 PST
HTTPSUpgradeList.db database should be opened in readonly mode since it is not meant to be modified by WebKit. Opening it in ReadWrite mode causes sandbox violations.
Attachments
Patch
(7.76 KB, patch)
2019-02-28 16:47 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-02-28 16:46:16 PST
<
rdar://problem/47103889
>
Chris Dumez
Comment 2
2019-02-28 16:47:58 PST
Created
attachment 363276
[details]
Patch
WebKit Commit Bot
Comment 3
2019-02-28 18:47:38 PST
Comment on
attachment 363276
[details]
Patch Clearing flags on attachment: 363276 Committed
r242251
: <
https://trac.webkit.org/changeset/242251
>
WebKit Commit Bot
Comment 4
2019-02-28 18:47:40 PST
All reviewed patches have been landed. Closing bug.
Don Olmstead
Comment 5
2019-02-28 19:26:35 PST
This broke the WinCairo build.
Chris Dumez
Comment 6
2019-02-28 19:41:46 PST
(In reply to Don Olmstead from
comment #5
)
> This broke the WinCairo build.
<
https://trac.webkit.org/changeset/242255
>
Simon Fraser (smfr)
Comment 7
2019-03-01 17:34:43 PST
Now I get logging every time I launch: ERROR: SQLite database failed to set journal_mode to WAL, error: attempt to write a readonly database ./platform/sql/SQLiteDatabase.cpp(137) : bool WebCore::SQLiteDatabase::open(const WTF::String &, WebCore::SQLiteDatabase::OpenMode)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug